2019-10-09  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* sysdeps/unix/sysv/linux/mips/mips64/getdents64.c (__getdents64):
	Add small optimization for older kernel to avoid issuing
	__NR_getdents64 on each call and replace scratch_buffer usage with
	a static allocated buffer.

2019-10-09  Florian Weimer  <fweimer@redhat.com>

	* config.h.in (HAVE_GCC_GOTDATA): Remove.
	* sysdeps/sparc/configure.ac: Remove checks for HAVE_GCC_GOTDATA
	and PI_STATIC_AND_HIDDEN.  Always define PI_STATIC_AND_HIDDEN.
	* sysdeps/sparc/configure: Regenerate.

2019-10-09  Petr Vorel  <pvorel@suse.cz>

	* include/dirent.h (__getdents64): Update comment.

2019-10-08  Gabriel F. T. Gomes  <gabrielftg@linux.ibm.com>

	* Makefile: Fix locale dependency for a couple of tests.
	($(objpfx)tst-strftime2.out): New rule.
	($(objpfx)tst-strftime3.out): Likewise.

2019-10-08  Florian Weimer  <fweimer@redhat.com>

	* posix/tst-wordexp-nocmd.c (do_test): Fix diagnostics output.

2019-10-08  Florian Weimer  <fweimer@redhat.com>

	* posix/Makefile (tests): Add tst-wordexp-nocmd.
	* posix/wordexp-test.c (__app_register_atfork): Remove function.
	(registered_forks): Remove variable.
	(register_fork): Remove function.
	(test_case): Remove WRDE_NOCMD tests.
	(main): Do not set up fork tracking.  Remove integer overflow in
	division tests.
	(testit): Do not check for unexpected forks.
	* posix/tst-wordexp-nocmd.c: New file containing the tests removed
	from posix/wordexp-test.c.

2019-10-07  Florian Weimer  <fweimer@redhat.com>

	nptl: Move pthread_attr_setschedparam implementation into libc.
	* nptl/Makefile (routines): Add pthread_attr_setschedparam.
	(libpthread-routines): Remove pthread_attr_setschedparam.
	* nptl/Versions (libpthread GLIBC_2.0): Remove
	pthread_attr_setschedparam.
	* nptl/forward.c (pthread_attr_setschedparam): Remove definition.
	* nptl/nptl-init.c (pthread_functions): Remove initializer for
	ptr_pthread_attr_setschedparam.